--- a/ztmp_001/webapp/view/App.view.xml
+++ b/ztmp_001/webapp/view/App.view.xml
@@ -1,7 +1,8 @@
-<mvc:View controllerName="com.hkmc.trial.ztmp001.controller.App"
-    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
-        <content />
-    </Page>
+<mvc:View 
+    controllerName="com.hkmc.trial.ztmp001.controller.App" 
+    xmlns:mvc="sap.ui.core.mvc" 
+    xmlns:ui="sap.ui.table" 
+    displayBlock="true" 
+    xmlns="sap.m" >
+    <App id="app"/>
 </mvc:View>
